<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="32sp"
    android:textStyle="bold"
    android:text="RULES"
    android:textAlignment="center"
    android:layout_marginTop="4sp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/rule_1"
    android:layout_margin="12sp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/rule_2"
    android:layout_margin="12sp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/rule_3"
    android:layout_margin="12sp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/rule_4"
    android:layout_margin="12sp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/rule_5"
    android:layout_margin="12sp"
    />
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical"
    android:gravity="center">
    <Button
      android:id="@+id/ok_button_rules"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="OK"
      android:textStyle="bold"
      android:textSize="24sp"
      android:padding="24sp"/>
  </LinearLayout>
</LinearLayout>