<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="com.example.lambda.assignmenttwo.MainActivity"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:textStyle="bold"
    android:text="@string/app_title"
    android:layout_marginTop="40sp"
    android:textAlignment="center"
    android:layout_gravity="center"
    android:padding="8sp"/>
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <LinearLayout
      android:id="@+id/main_linearlayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16sp"
      android:layout_marginBottom="104sp"
      android:paddingLeft="8sp"
      android:paddingRight="8sp"
      android:gravity="center_horizontal"
      android:layout_alignParentBottom="true">
      <Button
        android:id="@+id/main_play_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:layout_marginRight="16sp"
        android:text="@string/app_play"/>
      <Button
        android:id="@+id/main_rules_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:layout_marginLeft="16sp"
        android:text="@string/app_rules"/>
    </LinearLayout>
  </RelativeLayout>
</LinearLayout>
